[package]
name = "py-spy"
version = "0.3.14"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy"
description = "Sampling profiler for Python programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "MIT"
build="build.rs"
edition="2021"

[dependencies]
anyhow = "1"
clap = {version="3.2", features=["wrap_help", "cargo", "derive"]}
clap_complete="3.2"
console = "0.15"
ctrlc = "3"
indicatif = "0.16"
env_logger = "0.9"
goblin = "0.5.3"
inferno = "0.11.7"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
lru = "0.7"
regex = ">=1.6.0"
tempfile = "3.0.3"
proc-maps = "0.2.1"
memmap = "0.7.0"
cpp_demangle = "0.3"
serde = {version="1.0", features=["rc"]}
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
remoteprocess = {version="0.4.10", features=["unwind"]}
chrono = "0.4.19"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
