[features]
unwind = []

[package]
name = "py-spy"
version = "0.3.14"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy"
description = "Sampling profiler for Python programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "MIT"
build="build.rs"
edition="2021"

[dependencies]
anyhow = "1"
clap = {version="3.2", features=["wrap_help", "cargo", "derive"]}
clap_complete="3.2"
console = "0.15"
ctrlc = "3"
indicatif = "0.17"
env_logger = "0.10"
goblin = "0.7.1"
inferno = "0.11.17"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
lru = "0.10"
regex = ">=1.6.0"
tempfile = "3.6.0"
proc-maps = "0.3.2"
memmap2 = "0.9.4"
cpp_demangle = "0.4"
serde = {version="1.0", features=["rc"]}
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
remoteprocess = {version="0.4.12", features=["unwind"]}
chrono = "0.4.26"

[dev-dependencies]
py-spy-testdata = "0.1.0"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
