[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[project]
name = "py-spy"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 2",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Topic :: Software Development :: Libraries",
	"Topic :: Utilities"
]

[tool.maturin]
bindings = "bin"
