[package]
name = "remoteprocess"
version = "0.1.0"
authors = ["Ben Frederickson <github@benfrederickson.com>"]

[dependencies]
gimli = "0.17.0"
libc = "0.2"
log = "0.4"
proc-maps = "0.1.5"
benfred-read-process-memory = "0.1.3"
goblin = "0.0.21"
memmap = "0.7.0"

[target.'cfg(target_os="macos")'.dependencies]
mach_o_sys = "0.1.1"
mach = "0.2.0"
libproc = "0.4"

[target.'cfg(target_os="linux")'.dependencies]
nix="*"
object = "0.11"
addr2line = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}

[dev-dependencies]
env_logger = "0.6.1"

