[package]
name = "remoteprocess"
version = "0.1.0"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy/tree/master/remoteprocess"
description = "cross platform api for getting information on a running processes"
readme = "README.md"
license = "GPL-3.0"
build="build.rs"

[dependencies]
gimli = "0.19.0"
libc = "0.2"
log = "0.4"
proc-maps = "0.1.6"
benfred-read-process-memory = "0.1.4"
goblin = "0.0.22"
memmap = "0.7.0"

[target.'cfg(target_os="macos")'.dependencies]
mach_o_sys = "0.1.1"
mach = "0.3.2"
libproc = "0.4"

[target.'cfg(target_os="linux")'.dependencies]
nix="0.14"
object = "0.12"
addr2line = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}

[dev-dependencies]
env_logger = "0.6.1"

[build-dependencies]
bindgen = "0.49.0"
